# kqllinter

./: .env.example  .gitignore  CMakeLists.txt  DataConnectorSchema.json  KqlValidationTests.cs  LICENSE  README.md  Utils.cs  app.py  board.py  build.sh  c.py  capstone.nim  database.py  elf_pe_macho_parser.nim  example.nim  game.py  implant.nimble  implant.py  keystone.nim  main.nim  pieces.py  s.py  schemaindexer.py  server.py  settings.gradle  shell.nix  test.js  todo
app/: build.gradle
app/src/main/groovy/org/example/: App.groovy
metamorphic/: capstone.nim  locate_.text.py  main.nim
src/: Kusto.Language.sln  implant.nim  stringobfus  stringobfus.nim  uuid.nim
src/Kusto.Language/: Kusto.Language.csproj  Program.cs
src/crypto/: chacha20.nim  keys.nim
src/llm/: LLMInference.cpp  LLMInference.h  main.cpp
templates/: index.html
